--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
+
 }
 
 tasks.named('test') {
